# LearningPath

./: README.md
books/Machine_Learning_With_Python_CookBook/: 1. Vector, Matrix and Array.ipynb  1.Vector_Matrix_and_Array.ipynb
books/deepLearning_IanG/: 1_Chapter.md  computational_graph.md
buildApplication/helloWorld_DeepLearnin/: MNIST_with_keras.py
buildApplication/helloWorld_DeepLearning/: MNIST_with_keras.py
courses/: README.md  dataScienceLearningPath.md
courses/MathFaMl/: linearAlgebra.md
courses/computerVision/: Numpy.md  README.md  corePython.md
courses/computerVision/opencvPython/: Ubuntu_16.04_Install_OpenCV.txt
courses/computerVision/opencvPython/01.load_display_save/: code_v0.py
courses/cs231/: 1_2.course_notes.md  3.course_notes.md  Nearest_Neighbor_Classifier.py  Simple_KNN_Explanation_V1.ipynb  course_notes.md  distance_Matrix.md
courses/fast.ai/computational_linear_algebra/: Markov_Chains_Python.ipynb  Notes_ComputerLinearAlgebra_class1.ipynb
courses/fast.ai/deepLearning1/: support_notes.md
courses/mlCrashByGoogle/: notes.md
december/cuda_program/: matrix_mul.cu  mmul_1
december/machine_learning_for_humans_by_vishal/: machine_learning_for_humans_by_vishal_notes.md
december/transfer_learning_mobilenet/: README.md  transfer-learning_mobilenet.ipynb
february/: catVSDogs.py
january_2019/: normal_Distribution.ipynb
november/NeuralNetwork/: simpleCNNUsingKeras.ipynb
november/roboticOperatingSystem/: ros.md
october/cmake/: cmake.md
october/cmake/code/myApp1/: CMakeLists.txt  hello_world.c
tools/tensorboard/: mnist.py
(+28 files in other folders)
